// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`
SELECT
  a
 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD COLUMN a int 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int AFTER b 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int FIRST 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`CREATE TABLE "Foo" ( a int ) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "\\"(\\" expected.",
  "type": undefined,
}
`;

exports[`CREATE TABLE Foo ( a int ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( a int primary key ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
        Object {
          "columnName": "primary",
          "columnType": "key",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( a int, b varchar(255) ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
        Object {
          "columnName": "b",
          "columnType": "varchar",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( key (id) ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo () 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`DROP DATABASE IF EXISTS db_name 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`DROP DATABASE db_name 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`INSERT INTO foo (a, b) SELECT c, d FROM bar; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "INSERT",
      "expressions": Array [],
    },
    Object {
      "clauseName": "INTO",
      "expressions": Array [
        Object {
          "arguments": Array [
            "a",
            "b",
          ],
          "callee": "foo",
          "type": "CallExpression",
        },
      ],
    },
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "c",
        "d",
      ],
    },
    Object {
      "table": "bar",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`INSERT INTO foo (a, b) VALUES (1, 2), (3, 4); 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`INSERT INTO foo (a, b) VALUES (15, a * 2); 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`INSERT INTO foo VALUE (1), (2); 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "INSERT",
      "expressions": Array [],
    },
    Object {
      "clauseName": "INTO",
      "expressions": Array [
        Object {
          "isExplicit": false,
          "left": "foo",
          "right": "VALUE",
          "type": "AliasExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`INSERT INTO foo VALUES (1, 2) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`INSERT foo VALUES (1, 2) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`SELECT "1", '1', \`1\` 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT (a) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "expression": "a",
          "type": "ParenthesisExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT (f)() 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": Object {
            "expression": "f",
            "type": "ParenthesisExpression",
          },
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM "foo" 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Unexpected token.",
  "type": undefined,
}
`;

exports[`SELECT * FROM (SELECT * FROM foo) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Unexpected token.",
  "type": undefined,
}
`;

exports[`SELECT * FROM \`foo\`.\`goo\` 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": Object {
        "left": Object {
          "type": "LiteralToken",
          "value": "foo",
        },
        "right": Object {
          "type": "LiteralToken",
          "value": "goo",
        },
        "type": "MemberExpression",
      },
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM f.g.h 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": Object {
        "left": "f",
        "right": "g",
        "type": "MemberExpression",
      },
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo GROUP BY a HAVING b=5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
    Object {
      "clauseName": "GROUP BY",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "clauseName": "HAVING",
      "expressions": Array [
        Object {
          "left": "b",
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo LEFT JOIN goo ON foo.a = goo.a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
    Object {
      "clauseName": "LEFT JOIN",
      "expressions": Array [
        "goo",
      ],
    },
    Object {
      "clauseName": "ON",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "foo",
            "operator": ".",
            "right": "a",
          },
          "operator": "=",
          "right": Object {
            "left": "goo",
            "operator": ".",
            "right": "a",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo WHERE a = (SELECT max(b) FROM foo) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "\\")\\" expected.",
  "type": undefined,
}
`;

exports[`SELECT * FROM foo WHERE a = (SELECT max(b) FROM foo) 2`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "\\")\\" expected.",
  "type": undefined,
}
`;

exports[`SELECT * FROM foo f LEFT JOIN goo g ON f.a = g.a 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`SELECT * FROM foo, goo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo.goo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "table": Object {
        "left": "foo",
        "right": "goo",
        "type": "MemberExpression",
      },
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 1 SELECT 2 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "1",
      ],
    },
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "2",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 1 UNION SELECT 2 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`SELECT 1 UPDATE foo SET a = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "1",
      ],
    },
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 1; SELECT 2; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "1",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 2 * (a % b) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "2",
          "operator": "*",
          "right": Object {
            "expression": Object {
              "left": "a",
              "operator": "%",
              "right": "b",
            },
            "type": "ParenthesisExpression",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a "aa" 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b * c / d 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "a",
            "operator": "+",
            "right": Object {
              "left": "b",
              "operator": "*",
              "right": "c",
            },
          },
          "operator": "/",
          "right": "d",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b - c 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": Object {
            "left": "b",
            "operator": "-",
            "right": "c",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": "b",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a FROM b WHERE m = 6; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "table": "b",
      "type": "FromClause",
    },
    Object {
      "clauseName": "WHERE",
      "expressions": Array [
        Object {
          "left": "m",
          "operator": "=",
          "right": "6",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a aa 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "isExplicit": false,
          "left": "a",
          "right": "aa",
          "type": "AliasExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a as aa 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "isExplicit": true,
          "left": "a",
          "right": "aa",
          "type": "AliasExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a b c d e 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`SELECT a, b, 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
        "b",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a."select" FROM foo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": ".",
          "right": Object {
            "type": "LiteralToken",
            "value": "select",
          },
        },
      ],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a.* FROM foo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": ".",
          "right": Object {
            "type": "WildcardExpression",
          },
        },
      ],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT by FROM foo; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [],
    },
    Object {
      "clauseName": "by",
      "expressions": Array [],
    },
    Object {
      "table": "foo",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT f()() 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": "f",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT f(g(a)) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            Object {
              "arguments": Array [
                "a",
              ],
              "callee": "g",
              "type": "CallExpression",
            },
          ],
          "callee": "f",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT f.g() 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "f",
          "operator": ".",
          "right": Object {
            "arguments": Array [],
            "callee": "g",
            "type": "CallExpression",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT f.g.h() 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "f",
          "operator": ".",
          "right": Object {
            "left": "g",
            "operator": ".",
            "right": Object {
              "arguments": Array [],
              "callee": "h",
              "type": "CallExpression",
            },
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT fn(), fn(a), fn(a, b) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": "fn",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": "fn",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
            "b",
          ],
          "callee": "fn",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT max () 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": "max",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT max() 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": "max",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT not FROM a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "not",
      ],
    },
    Object {
      "table": "a",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT null, true, current_timestamp FROM a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "null",
        "true",
        "current_timestamp",
      ],
    },
    Object {
      "table": "a",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT varchar FROM a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "varchar",
      ],
    },
    Object {
      "table": "a",
      "type": "FromClause",
    },
  ],
  "type": "Statement",
}
`;

exports[`SSSSS foo FROM b 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a statement.",
  "type": undefined,
}
`;

exports[`UPDATE Foo SET a = 1 WHERE b = 2 ORDER BY c LIMIT 4 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`UPDATE Foo SET a = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`UPDATE Foo SET a = 5, b = 6 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": "5",
        },
        Object {
          "left": "b",
          "operator": "=",
          "right": "6",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`UPDATE Foo SET f(a) = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": Object {
            "arguments": Array [
              "a",
            ],
            "callee": "f",
            "type": "CallExpression",
          },
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;
